# stonk-tracker-agent

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  StonkTracker.spec  compose.yaml  launch_app.py  pyproject.toml
docker/: entrypoint.sh
migrations/: env.py
migrations/versions/: 0001_initial.py
src/stonk_tracker_agent/: __init__.py  analysis.py  chat.py  cli.py  config.py  focused_research.py  graph.py  llm_research.py  reports.py  streamlit_app.py  watchlist_enrichment.py
src/stonk_tracker_agent/db/: models.py  repositories.py  session.py
src/stonk_tracker_agent/providers/: market.py  search.py
tests/: conftest.py  test_config.py  test_focused_research.py  test_graph.py  test_llm_research.py  test_model_options.py  test_providers.py  test_report_cleanup.py  test_report_export.py  test_reports.py  test_repositories.py  test_search_provider.py  test_watchlist_enrichment.py
