[project]
name = "stonk-tracker-agent"
version = "0.1.0"
description = "LangChain/LangGraph stock watchlist research agent with SQL Server persistence and Streamlit UI."
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.13.3",
    "langchain>=0.3.0",
    "langchain-openai>=0.2.0",
    "langgraph>=0.2.35",
    "pandas>=2.2.0",
    "pydantic>=2.8.0",
    "pydantic-settings>=2.4.0",
    "pyodbc>=5.1.0",
    "python-dotenv>=1.0.1",
    "reportlab>=4.2.5",
    "requests>=2.32.0",
    "sqlalchemy>=2.0.34",
    "streamlit>=1.38.0",
    "yfinance>=0.2.50",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-mock>=3.14.0",
]

[project.scripts]
stonk-report = "stonk_tracker_agent.cli:run_report_cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/stonk_tracker_agent"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
